# masakari-specs

./: .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  template.rst  tox.ini
doc/source/: conf.py  contributing.rst  index.rst
doc/source/specs/2023.1/: index.rst
doc/source/specs/2023.2/: index.rst
specs/: 2023.1-template.rst  2023.2-template.rst  2024.1-template.rst  2024.2-template.rst  2025.1-template.rst  2025.2-template.rst  ocata-template.rst  queens-template.rst  rocky-template.rst  stein-template.rst  train-template.rst  ussuri-template.rst  victoria-template.rst  wallaby-template.rst  xena-template.rst  yoga-template.rst
specs/2025.2/approved/: host-monitors-by-kubernetes.rst
specs/ocata/approved/: implement-reserved-host-action.rst  lite-specs.rst
specs/ocata/implemented/: implement-reserved-host-action.rst
specs/pike/approved/: lite-specs.rst
specs/queens/approved/: lite-specs.rst
specs/rocky/approved/: introspective-instance-monitoring.rst  recovery-method-customization.rst
specs/stein/approved/: notifications-in-masakari.rst  progress-details-for-recovery-workflows.rst
specs/victoria/approved/: enable-to-segment.rst
specs/wallaby/approved/: repeated-check-to-determine-host-status.rst
specs/wallaby/implemented/: repeated-check-to-determine-host-status.rst
specs/xena/approved/: host-monitor-by-consul.rst  vm-evacuations-for-host-recovery.rst
specs/yoga/approved/: host-monitor-by-consul.rst  vm-evacuations-for-host-recovery.rst
specs/zed/implemented/: zed-template.rst
(+22 files in other folders)
